<resources>
    <string name="app_name">MAHA App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="cd_logo">Logo of Coder Story app</string>
    <string name="welcome">Welcome</string>
    <string name="signup">Signup</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="copyright">© 2024 Dicoding - Bangkit</string>
    <string name="logout">Logout</string>
    <string name="min_length_char">Minimal Length %1$d characters</string>
    <string name="email_hint">Text your email</string>
    <string name="pass_hint">Text your password</string>
    <string name="login_ket">Don\'t have any account ?</string>
    <string name="image_login">image login</string>
    <string name="invalid_email">Format email is invalid!</string>
    <string name="name">Name</string>
    <string name="name_hint">Text your name</string>
    <string name="age_hint">Text your age</string>
    <string name="weight_hint">Text your weight</string>
    <string name="height_hint">Text your height</string>
    <string name="health_condition_hint">Text your health condition</string>
    <string name="avatar">avatar</string>
    <string name="username">username</string>
    <string name="message_validation">Enter your %1$s</string>
    <string name="next">Next</string>
    <string name="login_success">Login success!</string>
    <string name="login_error">Cannot Login, please check again!</string>
    <string name="signup_error">Cannot Signup, please check again!</string>
    <string name="start">Start</string>
    <string name="swift"><![CDATA[Swipe >>]]></string>
    <string name="have_account">already have an account? </string>
    <string name="confirm">Confirm Password</string>
    <string name="data">Data Diri</string>
    <string name="umur">Age</string>
    <string name="Gender">Gender</string>
    <string name="LK">Male</string>
    <string name="PR">Female</string>
    <string name="Berat">Weight</string>
    <string name="Tinggi">Height</string>
    <string name="condition">Health condition</string>
    <string name="submit">Submit</string>
    <string name="phone_number">Phone Number</string>
    <string name="your_phone_number">Your Phone Number</string>
    <string name="rekomendasi_gym">Rekomendasi Gym</string>
    <string name="food_image">food image</string>
    <string name="food_title">Food Title</string>
    <string name="description_of_the_food">Short description of the food goes here.</string>
    <string name="rekomendasi_makanan_sehat">Rekomendasi Makanan Sehat</string>

    <string name="diabetes">Diabetes</string>
    <string name="hypertension">Hipertensi</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
<!--bar hallo-->
    <string name="greeting_text">Hallo, %1$s!</string>




</resources>