<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="#D3D3D3"
    android:backgroundTint="@color/background"
    tools:context="com.example.ui.datadiri.DataDiriActivity">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textAllCaps="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardBackgroundColor="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:text="@string/name"
            android:textStyle="bold"
            android:layout_marginTop="2dp" />

        <EditText
            android:id="@+id/edt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_hint"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            tools:ignore="Autofill,VisualLintTextFieldSize" />

        <TextView
            android:id="@+id/tv_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:text="@string/umur"
            android:textStyle="bold"
            android:layout_marginTop="16dp" />

        <EditText
            android:id="@+id/edt_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/age_hint"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            tools:ignore="Autofill,VisualLintTextFieldSize" />

        <TextView
            android:id="@+id/tv_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/Gender"
            android:layout_marginTop="16dp" />

        <RadioGroup
            android:id="@+id/rg_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/LK" />

            <RadioButton
                android:id="@+id/rb_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/PR" />
        </RadioGroup>

        <TextView
            android:id="@+id/tv_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/Berat"
            android:layout_marginTop="16dp" />

        <EditText
            android:id="@+id/edt_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/weight_hint"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            tools:ignore="Autofill,VisualLintTextFieldSize" />

        <TextView
            android:id="@+id/tv_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/Tinggi"
            android:layout_marginTop="4dp" />

        <EditText
            android:id="@+id/edt_height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/height_hint"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            tools:ignore="Autofill,VisualLintTextFieldSize" />

        <TextView
            android:id="@+id/tv_health_condition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/condition"
            android:layout_marginTop="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="0dp">

            <!-- Diabetes Section -->
            <TextView
                android:id="@+id/tv_diabetes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/diabetes"
                android:layout_marginTop="8dp" />

            <RadioGroup
                android:id="@+id/rg_diabetes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_diabetes_yes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yes"
                    tools:ignore="DuplicateSpeakableTextCheck" />

                <RadioButton
                    android:id="@+id/rb_diabetes_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/no"
                    tools:ignore="DuplicateSpeakableTextCheck" />
            </RadioGroup>

            <!-- Hypertension Section -->
            <TextView
                android:id="@+id/tv_hypertension"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hypertension"
                android:layout_marginTop="2dp" />

            <RadioGroup
                android:id="@+id/rg_hypertension"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_hypertension_yes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yes" />

                <RadioButton
                    android:id="@+id/rb_hypertension_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no"
                    android:layout_marginStart="16dp" />
            </RadioGroup>
        </LinearLayout>


        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="@string/submit"
            tools:ignore="VisualLintButtonSize" />
    </LinearLayout>
</androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
